--- a/public/profile.html
+++ b/public/profile.html
@@ -24,7 +24,7 @@
 </head>
 
 <body onload="getProfile(); getTweets(); ">
-    <header class="bg-success sticky-top">
+    <header class=" bg-dark sticky-top" >
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -67,13 +67,13 @@
         <section>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-3" style="position: fixed;">
+                    <div class="col-md-2  text-center" style="position: fixed; height: 100vh; background-color: #4e53b1;">
                         <form action="#" class="form">
                             <label class="filebutton">
                                 <div class="imageUpdate">
                                     <img class="img " id="img"
                                         src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png"
-                                        alt="Pagal" style="border-radius: 100%">
+                                        alt="" style="border-radius: 100%" height="150px" width="150px">
                                     <div class="middle">
                                         <div class="text"></div>
                                     </div>
@@ -84,9 +84,9 @@
                             </label>
                         </form>
 
-                        <a class="btn btn-outline-success my- my-sm-0 ml-2" href="#" onclick="showHome()">Home
+                        <a class="btn btn-outline-light my- my-sm-0 ml-2" href="#" onclick="showHome()">Home
                         </a><br><br>
-                        <a class="btn btn-outline-success my- my-sm-0 ml-2" href="#" onclick="showProfile()">Profile
+                        <a class="btn btn-outline-light my- my-sm-0 ml-2" href="#" onclick="showProfile()">Profile
                         </a>
                     </div>
                     <div class="col-md-5 mt-5  " style="margin-left: 400px">
